fix: paragraph words overflowing on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,6 +10,7 @@
 html {
   overflow-y: auto;
   overflow-x: hidden;
+  overflow-wrap: break-word;
   color-scheme: light;
   scroll-padding-top: 100px;
 }
